--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 annotated-types==0.7.0
+black==24.10.0
+click==8.1.7
+colorama==0.4.6
 comtypes==1.4.8
 contourpy==1.3.0
 cycler==0.12.1
@@ -6,9 +9,12 @@ fonttools==4.54.1
 kiwisolver==1.4.7
 matplotlib==3.9.2
 mutagen==1.47.0
+mypy-extensions==1.0.0
 numpy==2.1.2
 packaging==24.1
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.3.6
 pyawr==24.1.1
 pyawr-utils==1.0
 pydantic==2.9.2
